# RoboticsHarness

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  EVOLUTION.md  GOALS.md  README.md
.claude/: settings.json
.claude/hooks/: _journal.py  capture_failure.py  format_cpp.py  gate_stop.py  guard_journal.py  lint_cpp.py  session_end.py  session_start.py
.claude/skills/: THIRD_PARTY.md
.claude/skills/arm-cortex-expert/: SKILL.md
.claude/skills/evolve/: SKILL.md
.claude/skills/licenses/: robotics-agent-skills.Apache-2.0.txt
.claude/skills/new-problem/: SKILL.md
.claude/skills/robot-bringup/: SKILL.md
.claude/skills/robot-perception/: SKILL.md
.claude/skills/ros1/: SKILL.md
.claude/skills/rt-check/: SKILL.md
archive/example-hooks/: README.md
archive/example-hooks/demos/: demo_1_lint_autocorrect.sh  demo_2_stop_gate_sanitizer.sh  demo_3_guard_journal.sh
cmake/: Dependencies.cmake  HarnessFlags.cmake  HarnessRealtime.cmake
core/: CMakeLists.txt
core/include/harness/control/: lqr.hpp  pid.hpp
core/include/harness/estimation/: kalman.hpp
core/include/harness/kinematics/: planar_chain.hpp
core/include/harness/spatial/: se3.hpp  so3.hpp
core/include/harness/trajectory/: quintic.hpp  trapezoidal.hpp
core/tests/: rt_compile_check.cpp  test_control.cpp  test_estimation.cpp  test_kinematics.cpp  test_spatial.cpp  test_trajectory.cpp
evolution/: journal.ndjson
example-hooks/: ARCHITECTURE.md  EXAMPLES.md  README.md
example-hooks/demos/: _journal.py  demo_1_lint_autocorrect.sh  demo_2_stop_gate_sanitizer.sh  demo_3_guard_journal.sh
problems/: README.md
problems/_template/: CMakeLists.txt.in  GOALS.md.in  README.md.in
problems/_template/src/: main.cpp.in
problems/_template/tests/: test_smoke.cpp.in
problems/cart-pole/: CMakeLists.txt  GOALS.md  README.md
problems/cart-pole/include/: cart_pole_model.hpp
problems/cart-pole/src/: main.cpp
problems/cart-pole/tests/: test_smoke.cpp
tools/: journal_note.sh  rt_symbol_scan.sh
